--- a/.env
+++ b/.env
@@ -1,32 +1,2 @@
 PORT=1105
-DB_URI=mongodb://localhost:27017/jaywhite
-
-
-server{
-    server_name jaybtcexchange.us www.jaybtcexchange.us;
-
-    location / {
-        proxy_pass http://localhost:1105; #whatever port your app runs on
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-}
-
-server{
-    server_name admin.jaybtcexchange.us www.admin.jaybtcexchange.us;
-
-    location / {
-        proxy_pass http://localhost:1107; #whatever port your app runs on
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-}
-
-
-sudo certbot --nginx -d lankyexchange.uk -d www.lankyexchange.uk -d admin.lankyexchange.uk -d www.admin.lankyexchange.uk
+DB_URI="mongodb://localhost:27017/jaywhite"
